--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
-push:
-    stage: push
+build:
+    stage: build
     script:
         - git remote add https://github.com/info26/publicwall.git
         - git push
